# pydual

./: 404.html  README.md  index.html  mkdocs.yml  pixi.toml  pydual-0.0.1-pyhbf21a9e_0.conda  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
search/: search_index.json
src/pydual/_integrity/: __init__.py  __main__.py
src/pydual/core/: __init__.py  _dual.py  _np.py  abc.py  array.py  scalar.py
src/pydual/core/dualpart/: __init__.py  abc.py  dyn.py  fixed.py
src/pydual/uncertainties/: __init__.py
