[project]
name = "pydual"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = ["numpy>=2.3.1,<3"]

#### `hatch` backend ###
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
#
# [tool.hatch.build.targets.wheel]
# packages = ["src/pydual"]

#### `uv` backend ###
[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["pydual"]
namespace = true

[tool.pyright]
pythonVersion = "3.13"
